org.lflang.lfc/test/resources/org/lflang/lfc/tests/simpleWarning.lf
target unknown;

main reactor Foo {

}
